--- a/src/assets/scss/argon-design-system/dropdown.scss
+++ b/src/assets/scss/argon-design-system/dropdown.scss
@@ -9,7 +9,7 @@
   min-width: 12rem;
 
   .dropdown-item {
-    padding: 1rem;
+    padding: .5rem 1rem;
     font-size: $font-size-sm;
     > i,
     > svg {
